tests/snapshots/solver_traces@7016559903192005511.snap
---
source: tests/trace_solver.rs
---
Query: `mut ref mut x: T`

mut ref mut x @ p: T
// Applying rule `Binding`
mut x @ &mut p: &mut T

// Successful:
let mut x: &mut T = &mut p
