tests/snapshots/solver_traces@8664317663499122971.snap
---
source: tests/trace_solver.rs
---
Query: `[x]: &[T]`

[x] @ p: &[T]
// Applying rule `ConstructorRef`
x @ &(*p).0: &T

// Successful:
let x: &T = &(*p).0
