tests/snapshots/spanshot_request@10050896776108973155.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: false, simplify_expressions: true, eat_two_layers: false, eat_inherited_ref_alone: true }"
---
Query: `&x: &mut T`

&x @ p: &mut T
// ERROR: no rules applies to &x @ p: &mut T
