tests/snapshots/spanshot_request@10062753787091521261.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: Skip, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true, eat_two_layers: false, eat_inherited_ref_alone: true }"
---
Query: `[ref x]: &[T]`

[ref x] @ p: &[T]
// Applying rule `ConstructorRef`
ref x @ &(*p).0: &T
// Applying rule `Binding`
x @ &(*p).0: &T

// Final bindings:
let x: &T = &(*p).0
