tests/snapshots/spanshot_request@1035390532014340967.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `ref mut x: T`

ref mut x @ p: T
// Applying rule `Binding`
x @ &mut p: &mut T

// Final bindings:
let x: &mut T = &mut p
